--- a/README.org
+++ b/README.org
@@ -16,7 +16,7 @@ The library is considered to be in pre-alpha, unstable state. Everything may cha
   #include "Server.h"
 
   int main() {
-    zmq::context_t ctx;
+    auto ctx = std::make_shared<zmq::context_t>();
     auto handshaker = std::make_shared<PakeHandshaker>(ctx, "password");
 
     const auto message_handler = [](const Bytes& data) {
@@ -41,7 +41,7 @@ The library is considered to be in pre-alpha, unstable state. Everything may cha
   #include "PakeHandshaker.h"
 
   int main() {
-    zmq::context_t ctx;
+    auto ctx = std::make_shared<zmq::context_t>();
     auto handshaker = std::make_shared<PakeHandshaker>(ctx, "password");
     Client client{ctx, handshaker};
 
