--- a/README.org
+++ b/README.org
@@ -16,8 +16,7 @@ The library is considered to be in pre-alpha, unstable state. Everything may cha
   #include "Server.h"
 
   int main() {
-    auto ctx = std::make_shared<zmq::context_t>();
-    auto handshaker = std::make_shared<PakeHandshaker>(ctx, "password");
+    auto handshaker = std::make_shared<PakeHandshaker>("password");
 
     const auto message_handler = [](const Bytes& data) {
       // Print the message, treating is as a string.
@@ -28,7 +27,7 @@ The library is considered to be in pre-alpha, unstable state. Everything may cha
       return Bytes{'r', 'e', 's', 'p', 'o', 'n', 's', 'e'};
     };
 
-    Server server(ctx, handshaker, message_handler);
+    Server server{std::move(handshaker), message_handler};
 
     // Bind to ZeroMQ address, could be "tcp://1.2.3.4:5678" for network address
     server.Bind("ipc://zeromq-server");
@@ -41,9 +40,8 @@ The library is considered to be in pre-alpha, unstable state. Everything may cha
   #include "PakeHandshaker.h"
 
   int main() {
-    auto ctx = std::make_shared<zmq::context_t>();
-    auto handshaker = std::make_shared<PakeHandshaker>(ctx, "password");
-    Client client{ctx, handshaker};
+    auto handshaker = std::make_shared<PakeHandshaker>("password");
+    Client client{std::move(handshaker)};
 
     if (not client.Connect("ipc://zeromq-server")) {
       std::cerr << "Connection failed\n";
